--- a/app/src/main/res/navigation/screens_navigation.xml
+++ b/app/src/main/res/navigation/screens_navigation.xml
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/screens_navigation">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/screens_navigation"
+    app:startDestination="@id/home">
 
-</resources>
+    <fragment
+        android:id="@+id/home"
+        android:name="com.laetitia.calculadoradejuroscompostos.screens.Home"
+        android:label="Home" >
+        <action
+            android:id="@+id/action_home_self"
+            app:destination="@id/home" />
+        <action
+            android:id="@+id/action_home_to_result"
+            app:destination="@id/result" />
+    </fragment>
+    <fragment
+        android:id="@+id/result"
+        android:name="com.laetitia.calculadoradejuroscompostos.Result"
+        android:label="Result" >
+        <action
+            android:id="@+id/action_result_self"
+            app:destination="@id/result" />
+        <action
+            android:id="@+id/action_result_to_home"
+            app:destination="@id/home" />
+    </fragment>
+</navigation>
