--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -40,10 +40,11 @@
             android:id="@+id/initialInvestmentInputFragment"
             android:layout_width="300dp"
             android:layout_height="50dp"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="100dp"
             android:padding="10dp"
             android:gravity="center"
             android:lines="1"
+            android:inputType="numberDecimal"
             android:background="@drawable/background_input_text"
             android:hint="@string/value_text"
             app:layout_constraintTop_toBottomOf="@id/appTitleFragment"
@@ -70,6 +71,7 @@
             android:padding="10dp"
             android:gravity="center"
             android:lines="1"
+            android:inputType="numberDecimal"
             android:hint="@string/value_text"
             app:layout_constraintTop_toBottomOf="@id/initialInvestmentInputFragment"
             app:layout_constraintEnd_toEndOf="parent"
@@ -95,6 +97,7 @@
             android:padding="10dp"
             android:gravity="center"
             android:lines="1"
+            android:inputType="number"
             android:hint="@string/interest_rate_input_text"
             app:layout_constraintTop_toBottomOf="@id/monthlyContributionInputFragment"
             app:layout_constraintEnd_toStartOf="@id/interestRateSpinnerFragment"
@@ -105,6 +108,7 @@
             android:id="@+id/interestRateSpinnerFragment"
             android:layout_width="150dp"
             android:layout_height="50dp"
+            android:drawablePadding="8dp"
             android:entries="@array/interest_rate_spinner"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="@id/interestRateInputFragment"
@@ -131,6 +135,7 @@
             android:padding="10dp"
             android:gravity="center"
             android:lines="1"
+            android:inputType="number"
             android:hint="@string/period_value_text"
             app:layout_constraintTop_toBottomOf="@id/interestRateInputFragment"
             app:layout_constraintEnd_toStartOf="@id/periodSpinnerFragment"
@@ -156,6 +161,39 @@
             android:layout_marginTop="50dp"
             android:text="@string/calculate_text_button"
             app:layout_constraintTop_toBottomOf="@id/periodInputFragment"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            />
+
+        <View
+            android:id="@+id/loadScreenViewFragmen"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#88000000"
+            android:visibility="invisible"
+            />
+
+        <ProgressBar
+            android:id="@+id/loadScreenProgressBarFragment"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:visibility="invisible"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:text="@string/loading_text"
+            android:visibility="invisible"
+            app:layout_constraintTop_toBottomOf="@id/loadScreenProgressBarFragment"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             />
