--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/background_screen"
         tools:context=".MainActivity">
 
         <TextView
@@ -23,6 +24,7 @@
             android:textAlignment="center"
             android:textStyle="bold"
             android:textSize="@dimen/_20sp"
+            android:textColor="@color/text_color"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -36,6 +38,7 @@
             android:text="@string/creator"
             android:textAlignment="center"
             android:textStyle="bold"
+            android:textColor="@color/blue"
             android:textSize="@dimen/_16sp"
             app:layout_constraintTop_toBottomOf="@id/appTitleFragment"
             app:layout_constraintEnd_toEndOf="parent"
@@ -48,6 +51,7 @@
             android:layout_marginBottom="@dimen/_5dp"
             android:text="@string/initial_investment_text"
             android:textSize="@dimen/_16sp"
+            android:textColor="@color/text_color"
             app:layout_constraintBottom_toTopOf="@id/initialInvestmentInputFragment"
             app:layout_constraintStart_toStartOf="@id/initialInvestmentInputFragment" />
 
@@ -60,6 +64,7 @@
             android:gravity="center"
             android:lines="1"
             android:textSize="@dimen/_20sp"
+            android:textColor="@color/text_color"
             android:inputType="numberDecimal"
             android:background="@drawable/background_input_text"
             android:hint="@string/value_text"
@@ -74,6 +79,7 @@
             android:layout_marginBottom="@dimen/_5dp"
             android:text="@string/monthly_contribution_text"
             android:textSize="@dimen/_16sp"
+            android:textColor="@color/text_color"
             app:layout_constraintBottom_toTopOf="@id/monthlyContributionInputFragment"
             app:layout_constraintStart_toStartOf="@id/monthlyContributionInputFragment" />
 
@@ -87,6 +93,7 @@
             android:gravity="center"
             android:lines="1"
             android:textSize="@dimen/_20sp"
+            android:textColor="@color/text_color"
             android:inputType="numberDecimal"
             android:hint="@string/value_text"
             app:layout_constraintTop_toBottomOf="@id/initialInvestmentInputFragment"
@@ -100,6 +107,7 @@
             android:layout_marginBottom="@dimen/_5dp"
             android:text="@string/interest_rate_text"
             android:textSize="@dimen/_16sp"
+            android:textColor="@color/text_color"
             app:layout_constraintBottom_toTopOf="@id/interestRateInputFragment"
             app:layout_constraintStart_toStartOf="@id/interestRateInputFragment" />
 
@@ -112,6 +120,7 @@
             android:padding="@dimen/_10dp"
             android:gravity="center"
             android:textSize="@dimen/_20sp"
+            android:textColor="@color/text_color"
             android:lines="1"
             android:inputType="number"
             android:hint="@string/interest_rate_input_text"
@@ -127,6 +136,7 @@
             android:entries="@array/interest_rate_spinner"
             android:textAlignment="center"
             android:textSize="@dimen/_20sp"
+            android:textColor="@color/text_color"
             app:layout_constraintBottom_toBottomOf="@id/interestRateInputFragment"
             app:layout_constraintEnd_toEndOf="@id/monthlyContributionInputFragment"
             app:layout_constraintStart_toEndOf="@id/interestRateInputFragment"
@@ -139,6 +149,7 @@
             android:layout_marginBottom="@dimen/_5dp"
             android:text="@string/period_text"
             android:textSize="@dimen/_16sp"
+            android:textColor="@color/text_color"
             app:layout_constraintBottom_toTopOf="@id/periodInputFragment"
             app:layout_constraintStart_toStartOf="@id/periodInputFragment" />
 
@@ -153,6 +164,7 @@
             android:lines="1"
             android:inputType="number"
             android:textSize="@dimen/_20sp"
+            android:textColor="@color/text_color"
             android:hint="@string/period_value_text"
             app:layout_constraintTop_toBottomOf="@id/interestRateInputFragment"
             app:layout_constraintEnd_toStartOf="@id/periodSpinnerFragment"
@@ -164,6 +176,7 @@
             android:layout_height="@dimen/_50dp"
             android:entries="@array/period_spinner"
             android:textAlignment="center"
+            android:textColor="@color/text_color"
             app:layout_constraintTop_toTopOf="@id/periodInputFragment"
             app:layout_constraintEnd_toEndOf="@id/interestRateSpinnerFragment"
             app:layout_constraintBottom_toBottomOf="@id/periodInputFragment"
